--- a/数据接口设计.md
+++ b/数据接口设计.md
@@ -20,3 +20,23 @@
 - 是否异常
 - 是否在控制路径上
 - 是否脱轨
+``` c#
+/// <summary>
+/// agv小车的状态
+/// </summary>
+public class AgvParam : IAgvParam
+{
+    public bool IsForward { get; set; }
+    public bool IsStop { get; set; }
+    public Point Position { get; set; }
+    public double Direction { get; set; }
+    public double Speed { get; set; }
+    public bool IsHaveGoods { get; set; }
+    public double Battery { get; set; }
+    public bool IsBack { get; set; }
+    public bool IsError { get; set; }
+    public bool IsControlPath { get; set; }
+    public bool IsTrip { get; set; }
+}
+
+```
