--- a/安全设计.md
+++ b/安全设计.md
@@ -13,3 +13,23 @@
 - 中距
 
 ### 速度限制等级
+
+FAQ:
+- 人工干预之后，恢复自动运行，如何保证安全？
+- 如何智能提示？
+- 为何没有提示？
+- 设置复位点？    
+
+### 关于超宽检测的设计
+- 为什么需要超宽检测
+- 超宽检测的原理
+- 超宽检测的算法
+
+为什么需要超宽检测？
+- Agv运行的过程中，货物可能会向左边或者右边倾斜。
+
+超宽检测的原理：
+- 在货物倾斜的情况下，货物的宽度会变得更大。
+- 货物挡住了超宽激光，触发超宽检测信号。
+- Agv收到超宽检测信号后，停车报警。
+
