--- a/地图设计.md
+++ b/地图设计.md
@@ -22,3 +22,15 @@
 - 绘制Agv未来位姿到路径的距离
 - 绘制Agv即将行驶的路径
 - 绘制Agv移动过的路径
+
+
+### 地图是如何设计的？
+我们的地图能够做到多少的精度？
+
+我们的地图是否应该包含库位？管制区域?各种障碍物？自动门等信息？
+
+地图的设计一定是跟定位紧密结合在一起的。
+
+其实地图也设计到规划的路线
+
+通过地图知道即将转弯
