--- a/Design/上视相机使能.md
+++ b/Design/上视相机使能.md
@@ -1,4 +1,98 @@
-- 第一次的时候首先延迟200个周期即2s才能使能上视相机
-- 之后才能启动相机
-- 当ImageIndex > 6000的时候，开始强制同步，停止20个周期（即2s)
-- ImageIndex为上视相机编号
+- 图片编号由下位机上传给固件转发给定位模块
+- 图片编号 = 下位机消息编号
+- 若相机从未使能到使能则触发一次图片编号更新，其它情况保持不变
+- 图片编号的配置为sensor.config的设备ImageIndex
+``` xml
+<ImageIndex Function="U" Length="4" DisplayName="上视图像" />
+```
+
+- 当Image.Index（这里为定位的图片编号, 与嵌入式的ImageIndex有区别） > 6000的时候，开始强制同步，停止20个周期（约200ms)，理论上index从0到6000约为1分钟
+- Image时间戳不匹配，重置相机，（约200ms后使能）, 每次重置后Image.Index从0开始
+
+### 相关代码片段
+- ImageIndex：照片编号, 下发给定位模块使用，
+``` c#
+var sencerData = new CorrectionSencerData(outputPack)
+{
+    LaserDistanceData = BuildLaserDistance(),
+    MagneticFieldData = BuildMagneticFieldData(),
+    DownStartIndex = _downImageDataProvider.CurrentIndex,
+    UpStartIndex = _upImageDataProvider.CurrentIndex,// 上视相机的当前编号，由嵌入式上传
+    RFID = GetRFID(),
+    OdoOuputPack = input.odoOutPutPack
+};
+_sencerDatas.Enqueue(sencerData);
+if (_sencerDatas.Count >= CacheCount)
+{
+    var data = _sencerDatas.Dequeue();
+    ...
+```
+
+- SetCameralEnable：设置相机（这里命名不太符合设计） 
+``` c#
+//设置相机的使能或者重置
+protected void SetCamearEnable
+{
+    var outputCodes = new List<OutputCode>();
+    outputCodes.Add(new OutputCode() { OutputType = OutputType.CameraOutputDown, IsEnabled = DownImageEnable });
+    outputCodes.Add(new OutputCode() { OutputType = OutputType.CameraOutputUp, IsEnabled = UpImageEnable });
+    ActuatorManager.Manager.MakeOutput(outputCodes);
+}
+
+```
+- ImageDataProvider 重置相机的核心逻辑
+``` c#
+public void Refresh()
+{
+    if (_resetNecessary)
+    {
+        _resetNecessary = false;
+        Reset();
+    }
+    if (_iamgeIndex != null)
+    {
+        ...
+        if (_lastTransactImageIndex > ForceSyncCount)//固定每分钟关闭相机
+        {
+            _imageDisableCount = StopCaptureCount;// 通过设置_imageDisableCount = 200 来关闭相机200ms
+        }
+    }
+}
+
+private void Image_ImageCaptured(object sender, ImageCapturedEventArgs e)
+{
+    ...
+    _imageDatas.Enqueue(imageData);
+    if (_imageDatas.Count == 3 && _imageDatas.First().Index == 0)
+    {
+        foreach (var item in _imageDatas.Skip(1))
+        {
+            if (Math.Abs(item.TimeSpan - (_imageSkipCount + 1) * (1000 / PostureAnalyserBase.Frequency) * 10) > 100)
+            {
+                log.Debug("Correction,Wrong Index,Force Sync");
+                _resetNecessary = true; // 错误编号引起重置
+            }
+        }
+    }
+    ...
+}
+
+// GetImageData
+else
+{
+    if (_imageDisableCount == 0)
+    {
+        _dismacthCount++;
+        if (_dismacthCount > 100)
+        {
+            _dismacthCount = 0;
+            _imageDisableCount = StopCaptureCount;// 通过设置_imageDisableCount = 200 来关闭相机200ms
+            if (log.IsDebugEnabled)
+            {
+                log.Debug("Correction,Force Sync");
+            }
+        }
+    }
+    return CorrectionBase.NoImageData;
+}
+```
