--- a/Design/上视相机使能.md
+++ b/Design/上视相机使能.md
@@ -9,6 +9,30 @@
 - 当Image.Index（这里为定位的图片编号, 与嵌入式的ImageIndex有区别） > 6000的时候，开始强制同步，停止20个周期（约200ms)，理论上index从0到6000约为1分钟
 - Image时间戳不匹配，重置相机，（约200ms后使能）, 每次重置后Image.Index从0开始
 
+### 相关log
+Agv.Function.log
+``` csv
+18:21:43.038 Correction,RemoveImageData:Index=110,TimeStamp=96855148
+18:21:43.048 Correction, TransactSencerData: Loop = 2443901, StartIndex =2442931
+18:21:43.057 Correction, TransactSencerData: Loop = 2443911, StartIndex =2442931
+18:21:43.068 Correction, TransactSencerData: Loop = 2443921, StartIndex =2442931
+18:21:43.077 Correction, TransactSencerData: Loop = 2443931, StartIndex =2442931
+18:21:43.088 Correction, TransactSencerData: Loop = 2443941, StartIndex =2442931
+18:21:43.098 Correction, TransactSencerData: Loop = 2443951, StartIndex =2442931
+18:21:43.098 Correction,Force SyncS
+18:21:43.106 Correction, TransactSencerData: Loop = 2443961, StartIndex =2442931
+18:21:43.118 Correction, TransactSencerData: Loop = 2443971, StartIndex =2442931
+18:21:43.128 Correction, TransactSencerData: Loop = 2443981, StartIndex =2442931
+18:21:43.137 Correction,Image:Index=0,TimeStamp=96856148
+18:21:43.137 Correction,Image Data Error
+```
+
+Agv.message.log
+``` csv
+07:05:43.951 R AA-00-00-00-04-00-00-00-00-00-00-00-00-00-00-FF-EF-FF-FF-F2-86-14-09-00-00-00-47-00-00-00-00-00-00-04-30-01-17-FF-FF-FF-EF-00-01-90-00-47-00-69-06-01-0C-0F-D2-00-54-00-00-00-00-00-00-00-0D-1A-36-00-0D-3B-5C-74-36-55
+07:05:43.963 R AA-00-00-00-04-00-00-00-00-00-00-00-00-00-00-FF-EF-FF-FF-F2-86-14-05-00-00-00-47-00-00-00-00-00-00-04-30-01-17-FF-FF-FF-EF-00-01-90-00-47-00-69-06-01-0C-0F-D2-00-54-00-00-00-00-00-00-00-0D-1A-36-00-0D-3B-5D-4A-BB-55
+```
+
 ### 相关代码片段
 - ImageIndex：照片编号, 下发给定位模块使用，
 ``` c#
